fixed a bug related to a hotkey(jumping between messages), fixed customization and it actually works but its not finished

--- a/public/style.css
+++ b/public/style.css
@@ -21,6 +21,8 @@
     --selected-chat-background: rgb(10, 30, 10);
     --selected-chat-background-hover: rgb(21, 61, 21);
 
+    --caret-color : rgb(107, 177, 107); 
+
     --short-transition : 200ms;
     --long-transition  : 500ms;
     
@@ -50,7 +52,7 @@ body {
     background-color: var(--main-background-color)
 }
 input {
-    caret-color: rgb(107, 177, 107)             !important;
+    caret-color: var(--caret-color)               !important;
     background-color: var(--secondary-background) !important;
     border: solid 2px var(--main-border)          !important;
     box-shadow: 0 0 15px 5px var(--main-blur)     !important;
@@ -60,8 +62,6 @@ input {
 }
 input:focus {
     outline: none;
-    border: solid 2px var(--border-focus)      !important;
-    box-shadow: 0 0 20px 5px var(--blur-focus) !important;
 }
 svg path {
     fill: var(--main-color) ; 
@@ -147,6 +147,10 @@ button {
     height: 50px;
     border-radius: 50px;
     margin-left: 11.25px; 
+}
+#input:focus {
+    border: solid 2px var(--border-focus)      !important;
+    box-shadow: 0 0 20px 5px var(--blur-focus) !important;
 }
 #messages {
     width: 100%;
@@ -366,7 +370,7 @@ button {
     background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet,red);
     background-size: 200% 200%;
     background-clip: border-box;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 1);
+    box-shadow: inset 0 0 0 1000px var(--main-background-color);
     animation: rainbow 3s linear infinite ;
 }
 #games:hover {
